# jong

./: .coveragerc  .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  my_feeds.csv  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js  store.js
frontend/src/components/: Navbar.vue  RssForm.vue  RssLine.vue  RssList.vue
jong/: __init__.py  apps.py  core.py  db.py  env.sample  forms.py  jong.py  load_data.py  models.py  my_feeds.csv  settings.py  test_core.py  tests.py  urls.py  utils.py  views.py  wsgi.py
jong/api/: permissions.py  serializers.py  urls.py  views.py
jong/management/commands/: report.py  run.py  switch.py
jong/migrations/: 0001_initial.py  0002_rss_bypass_bozo.py
jong/templates/: base.html
jong/templates/jong/: rss.html  rss_confirm_delete.html  rss_create.html  rss_list.html  rss_update.html
