[metadata]
name=jong
description="JOplin Notes Generator"
author=FoxMaSk
author_email=foxmask protonmail
maintainer=FoxMaSk
maintainer_email=foxmask protonmail
url=https://github.com/foxmask/jong
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=joplin
download_url="https://github.com/foxmask/jong/archive/jong-" + version + ".zip",
version=attr: jong.__version__

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

[options]
zip_safe=false

include_package_data=true

install_requires=
    arrow==0.13.0
    asks==2.2.0
    Django>=2.1,<3.0
    django-environ==0.4.5
    feedparser==5.2.1
    pypandoc==1.4
    requests==2.21.0
    trio==0.10.0
    djangorestframework==3.9.1
    django-cors-headers==2.4.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=migrations,*settings*.py,.tox,build,manage.py
